<resources>
    <string name="app_name">Shopping App Example</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_cart">Cart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_account">Your Account</string>
    <string name="your_orders">Your Orders</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="basket_subtotal">Basket Subtotal</string>
    <string name="items">Items</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>

    <string-array name="qunatity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
