<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/foods"/>
        <item
                android:id="@+id/nav_drink"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/drinks"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools"/>
    </group>

    <item android:title="@string/your_account">
        <menu>
            <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/your_orders"/>
            <item
                    android:id="@+id/nav__accountSettings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/account_settings"/>

            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>
        </menu>
    </item>

</menu>
